--- a/src/components/GlobalModuleCss/GlobalModuleCss.css
+++ b/src/components/GlobalModuleCss/GlobalModuleCss.css
@@ -1,6 +1,21 @@
 .card-img-top {
-    height: 200px;
+    height: 70px;
+    width: 70px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.card:hover {
+    transform: scale(0.9);
+    opacity: 0.5;
+}
+
+.card-footer {
+    background-color: #efdbdb;
+}
+
+.nav-item:hover {
+    transform: scale(0.9);
+    opacity: 0.5;
 }
